--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 Assets/Font/* linguist-vendored
 Assets/Font/** linguist-vendored
 Assets/Pakage/* linguist-vendored
-Assets/Pakage/** linguist-detectable=false
+Assets/Pakage/** linguist-vendored
